# Only

./: .env.example  .gitignore  ARCHITECTURE.md  ARCHITECTURE_AUDIT.md  AUDIT.md  Dockerfile  README.md  alembic.ini  nixpacks.toml  pyproject.toml  railway.json  requirements-dev.txt  requirements.txt  run.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py  002_add_missing_users_columns.py  003_sync_habits_referrals_lang.py  004_referral_hardening.py  005_users_language_strict.py  006_motivation_habit_logs_daily_progress.py  007_seed_motivation_phrases.py  008_production_schema_stabilization.py  009_fix_habit_logs_user_id.py  (+11 more)
app/: __init__.py  config.py  database.py  db.py  db_autofix.py  db_seed.py  health.py  health_server.py  keyboards.py  logger.py  main.py  main_orchestrator.py  models.py  scheduler.py  texts.py  web.py
docs/: ADMIN_DASHBOARD.md  ANALYTICS.md  CLEAN_ARCHITECTURE.md  DATABASE_SCHEMA.md  FSM_DESIGN.md  HEALTHCHECK_ARCHITECTURE.md  LOAD_AND_CHAOS_TESTING.md  MONITORING.md  OPERATIONAL_PLAYBOOK.md  PAYMENTS.md  PRE_RELEASE_CHECKLIST.md  RETENTION_AUTORENEW.md  SCALING_ARCHITECTURE.md  SCHEDULER.md  TEAM_GUIDE.md  TEXTS_UX.md
migrations/: env.py
scripts/: deploy_gate.py  hotfix_schema_drift.sql  hotfix_users_columns.sql  railway_db_reset.sql  railway_production_fix.sql  stamp_alembic.sql
tests/: conftest.py  test_content_moderator.py  test_crypto_service.py  test_discount_service.py  test_input_sanitizer.py  test_referral_token.py  test_streak_recovery.py  test_trial_service.py  test_user_service.py
(+213 files in other folders)
